--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html, body {
 }
 
 h2 {
-    font-family: 'Lucida Blackletter Regular', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0 0 0.75rem 0;
     font-size: 1.75rem;
 }
